<resources>
    <string name="app_name">CraftsmanBartender</string>
    <string name="string_main_recipe_btn">Recipes</string>
    <string name="string_main_mock_test_btn">Mock Test</string>
    <string name="string_recipe_add_content_description">Add Recipes</string>
    <string name="making_style_header">Making Style</string>
    <string name="glass_header">Glass</string>
    <string name="garnish_header">Garnish</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="string_apply_to_mock_test">Apply to Mock Test</string>
    <string name="string_add_ingredient">Add Ingredient</string>
    <string name="string_ingredients">Ingredients</string>
    <string name="string_secondary_making_style">Secondary Making Style</string>
    <string name="string_primary_making_style">Primary Making Style</string>
    <string name="string_name">Name</string>
    <string name="string_create">Create</string>
    <string name="string_start">Start</string>
    <string name="string_mock_test_intro_header">조주기능사 모의 실기 테스트</string>
    <string name="string_mock_test_intro_description">
        1. `Start` 버튼을 누르면 카운트다운 후 테스트가 시작됩니다\n
        2. 테스트가 시작되면 화면 상단에 7분의 Timer 가 동작합니다\n
        3. 화면 중앙에는 사용자가 설정한 조주기능사 레시피 중 무작위로 3가지가 표시됩니다\n
        4. 레시피는 이름만 표시되며, 상세 레시피는 보이지 않습니다\n
        5. 제조가 완료되면 레시피명 좌측의 완료버튼을 클릭해주세요\n
        6. 만약 레시피를 다른걸로 바꾸고 싶다면 바꿀 레시피의 우측의 갱신 버튼을 눌러주세요\n
        7. 레시피를 다른 것으로 갱신하더라도 Timer 는 초기화되지 않습니다\n
        8. 레시피명을 클릭하면 상세 레시피가 팝업으로 표시됩니다\n
        9. 3개의 레시피의 완료 버튼를 모두 누르거나, 7분의 타이머가 종료되면 자동으로 테스트가 종료됩니다\n
    </string>
    <string name="string_warning_recipe_hint_event_message">
        실제 실기시험 환경에서는 레시피 힌트가 제공되지 않습니다\n되도록 레시피 힌트를 보지 않고 모의 테스트에 임하는 것을 추천합니다\n정말로 레시피 힌트를 보시겠어요?
    </string>
    <string name="string_test_greet">
        수고하셨습니다!\n
        테스트 결과를 확인해보세요
    </string>
    <string name="string_skipped_recipe_header">Skipped Recipes</string>
    <string name="string_hint_checked_recipes_header">Hint Checked Recipes</string>
    <string name="string_test_recipes_header">Test Recipes</string>
    <string name="string_first_recipe">First Recipe</string>
    <string name="string_second_recipe">Second Recipe</string>
    <string name="string_retry">Retry</string>
    <string name="string_done">Done</string>
    <string name="string_reroll_recipe_msg">실제 시험에서는 레시피를 교체할 수 없습니다\n정말로 레시피를 교체할까요?</string>
    <string name="string_update">Update</string>
    <string name="string_warning_msg_recipe_reset">Recipe 목록을 표준 조주기능사 레시피 목록으로 초기화합니다\n초기화 후에는 기존 레시피는 복구할 수 없습니다\n초기화하시겠습니까?</string>
    <string name="string_ingredient_error_msg">You must insert one ingredient at least</string>
    <string name="string_fill_up">Fill-Up</string>
</resources>