<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_mock_test_intro_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_mock_test_intro_header"
            android:textSize="21sp"
            android:fontFamily="@font/spoqa_han_sans_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_mock_test_intro_description"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_mock_test_intro_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_mock_test_intro_description"
            android:fontFamily="@font/spoqa_han_sans_light"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_mock_test_intro_header"
            app:layout_constraintBottom_toTopOf="@id/button_mock_test_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mock_test_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_start"
            app:layout_constraintTop_toBottomOf="@id/tv_mock_test_intro_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
