<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="skippedRecipesAdapter"
            type="com.soulkey.craftsmanbartender.ui.adapter.ResultRecipeListAdapter" />
        <variable
            name="hintCheckedRecipesAdapter"
            type="com.soulkey.craftsmanbartender.ui.adapter.ResultRecipeListAdapter" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/tv_greet_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/string_test_greet"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/spoqa_han_sans_regular"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_skipped_recipes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_greet_msg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/skipped_recipes_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_skipped_recipe_header"
                        android:textSize="14sp"
                        android:fontFamily="@font/spoqa_han_sans_regular"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:id="@+id/divider_skipped_recipes"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/skipped_recipes_header"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_skipped_recipes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:setAdapter="@{skippedRecipesAdapter}"
                        app:layout_constraintTop_toBottomOf="@id/divider_skipped_recipes"
                        tools:listitem="@layout/item_result_recipe_list"
                        tools:itemCount="2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_hint_checked_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_skipped_recipes">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_hint_checked_recipes_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_hint_checked_recipes_header"
                        android:textSize="14sp"
                        android:fontFamily="@font/spoqa_han_sans_regular"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:id="@+id/divider_hint_checked_recipes"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tv_hint_checked_recipes_header"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_hint_checked_recipes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:setAdapter="@{hintCheckedRecipesAdapter}"
                        app:layout_constraintTop_toBottomOf="@id/divider_hint_checked_recipes"
                        tools:listitem="@layout/item_result_recipe_list"
                        tools:itemCount="2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_test_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_hint_checked_recipes"
                app:layout_constraintBottom_toTopOf="@id/container_test_result_buttons"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_test_recipes_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_test_recipes_header"
                        android:textSize="14sp"
                        android:fontFamily="@font/spoqa_han_sans_regular"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:id="@+id/divider_test_recipes"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_test_recipes_header"/>

                    <TextView
                        android:id="@+id/tv_first_recipe_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/string_first_recipe"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/spoqa_han_sans_bold"
                        app:layout_constraintTop_toBottomOf="@id/divider_test_recipes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_first_recipe_is_completed"/>

                    <ImageView
                        android:id="@+id/iv_first_recipe_is_completed"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_check_circle_24px"
                        app:layout_constraintTop_toTopOf="@id/tv_first_recipe_name"
                        app:layout_constraintBottom_toBottomOf="@id/tv_first_recipe_name"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tv_second_recipe_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/string_second_recipe"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/spoqa_han_sans_bold"
                        app:layout_constraintTop_toBottomOf="@id/tv_first_recipe_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_second_recipe_is_completed"/>

                    <ImageView
                        android:id="@+id/iv_second_recipe_is_completed"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_check_circle_24px"
                        app:layout_constraintTop_toTopOf="@id/tv_second_recipe_name"
                        app:layout_constraintBottom_toBottomOf="@id/tv_second_recipe_name"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tv_third_recipe_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Third Recipe"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/spoqa_han_sans_bold"
                        app:layout_constraintEnd_toStartOf="@id/iv_third_recipe_is_completed"
                        app:layout_constraintTop_toBottomOf="@id/tv_second_recipe_name"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/iv_third_recipe_is_completed"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_circle_24px"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_third_recipe_name"
                        app:layout_constraintBottom_toBottomOf="@id/tv_third_recipe_name"/>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_test_result_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_test_recipes"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_retry_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_retry"
                    android:textSize="21sp"
                    android:fontFamily="@font/spoqa_han_sans_bold"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_test_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_done"
                    android:textSize="21sp"
                    android:fontFamily="@font/spoqa_han_sans_bold"
                    app:layout_constraintTop_toBottomOf="@id/button_retry_test"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</layout>
